Add new API app and disable db/redis in config

--- a/static/config.ini
+++ b/static/config.ini
@@ -1,5 +1,5 @@
 [database]
-enabled = true
+enabled = false
 dbname = test
 user = test
 password = KYyy53ys22XzAaNB
@@ -7,7 +7,7 @@ host = 127.0.0.1
 port = 5432
 
 [redis]
-enabled = true
+enabled = false
 host = 127.0.0.1
 port = 6379
 db = 1
