--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-libpq-dev
 colorthief==0.2.1
 Flask==3.1.0
 imageio==2.36.1
 Pillow==11.0.0
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 redis==5.2.1
 Requests==2.32.3
